# crumbs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/app/: help.rs  message.rs  mod.rs  theme.rs
src/cli/: mod.rs  output.rs
src/domain/: agenda.rs  id.rs  mod.rs  note.rs  person.rs  refs.rs  reminder.rs  tag.rs  task.rs  todo.rs  topic.rs
src/parser/: datetime.rs  mention.rs  mod.rs  sink.rs  tag.rs  topic.rs
src/store/: flatfile.rs  fts.rs  index.rs  io.rs  mod.rs  schema.sql  sqlite.rs
src/util/: calendar.rs  date_format.rs  mod.rs  text_input.rs
src/views/: calendar.rs  command_palette.rs  dashboard.rs  date_picker.rs  day_view.rs  link_overlay.rs  mod.rs  note_view.rs  nvim_bridge.rs  nvim_overlay.rs  people_view.rs  ref_explorer.rs  search_overlay.rs  sink_overlay.rs  task_list.rs  tasks_tab.rs
