[package]
name = "crumb"
version = "0.2.3"
edition = "2024"
description = "Terminal-based personal productivity system"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"

# Text processing
regex = "1"
once_cell = "1"

# IDs
ulid = "1"

# Error handling
anyhow = "1"

# File system
dirs = "5"
tempfile = "3"

# Neovim RPC embedding
nvim-rs = { version = "0.9", features = ["use_tokio"] }
tokio = { version = "1", features = ["rt", "process", "io-util", "time", "macros"] }
rmpv = "1"
async-trait = "0.1"

# Fuzzy search
nucleo-matcher = "0.3"

# SQLite
rusqlite = { version = "0.34", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
